feat: prepare program & api skeleton
