# pkg/api/api_clusters.go
@@ -1,0 +1,19 @@
+package api
+
+import "github.com/labstack/echo/v4"
+
+func (api *ApiImpl) CreateCluster(c echo.Context) error {
+	return nil
+}
+
+func (api *ApiImpl) DeleteCluster(c echo.Context, id string) error {
+	return nil
+}
+
+func (api *ApiImpl) GetCluster(c echo.Context, id string) error {
+	return nil
+}
+
+func (api *ApiImpl) ListClusters(c echo.Context) error {
+	return nil
+}
