# pkg/api/api_management_clusters.go
@@ -1,0 +1,19 @@
+package api
+
+import "github.com/labstack/echo/v4"
+
+func (api *ApiImpl) CreateManagementCluster(c echo.Context) error {
+	return nil
+}
+
+func (api *ApiImpl) ListManagementClusters(c echo.Context) error {
+	return nil
+}
+
+func (api *ApiImpl) GetManagementCluster(c echo.Context, id string) error {
+	return nil
+}
+
+func (api *ApiImpl) DeleteManagementCluster(c echo.Context, id string) error {
+	return nil
+}
